# Django-DDD-Best-Practice

./: .gitignore  README.md  address.tsv  manage.py  pyproject.toml
.github/: pull_request_template.md  release-drafter.yml
Context/address/: apps.py  models.py
Context/address/domain/: address_level1_entity.py  address_level2_aggregate.py  member_address_aggregate.py  member_living_address_entity.py  member_playing_address_aggregate.py
Context/address/migrations/: 0001_initial.py  0002_memberaddressaggregate.py
Context/address/repository/: address_query_repo.py  member_address_cmd_repo.py
Context/friend_code/: apps.py  models.py
Context/friend_code/domain/: freind_code_aggregate.py
Context/friend_code/migrations/: 0001_initial.py
Context/friend_code/repository/: friend_code_cmd_repo.py  (+1 more)
Context/member/: apps.py  enum.py  models.py
Context/preference/: apps.py  enum.py  models.py
Context/review/: apps.py  enum.py  models.py
Presentation/: master_url.py
Presentation/address/: serializer.py  url.py  view.py
Presentation/friend_code/: serializer.py  url.py  view.py
Presentation/member/: url.py  views.py
Presentation/preference/: serializer.py  url.py  view.py
Presentation/review/: serializer.py  url.py  view.py
Service/address/: address_lookup_service.py  member_address_register_service.py
Service/freind_code/: friend_code_service.py
Service/member/: member_register_service.py
Service/preference/: prference_service.py
Service/review/: review_service.py
Service/token/: token_service.py
WeMarry/: asgi.py  urls.py  wsgi.py
(+14 files in other folders)
